--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
           - testimonials
         -->
 
-        <section class="testimonials">
+        <!-- <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
 
@@ -399,7 +399,7 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
 
         <!--
@@ -451,7 +451,7 @@
           - clients
         -->
 
-        <section class="clients">
+        <!-- <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
 
@@ -495,7 +495,7 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
       </article>
 
@@ -507,7 +507,7 @@
         - #RESUME
       -->
 
-      <article class="resume" data-page="resume">
+      <!-- <article class="resume" data-page="resume">
 
         <header>
           <h2 class="h2 article-title">Resume</h2>
@@ -690,7 +690,7 @@
 
         </section>
 
-      </article>
+      </article> -->
 
 
 
@@ -700,7 +700,7 @@
         - #PORTFOLIO
       -->
 
-      <article class="portfolio" data-page="portfolio">
+      <!-- <article class="portfolio" data-page="portfolio">
 
         <header>
           <h2 class="h2 article-title">Portfolio</h2>
@@ -930,7 +930,7 @@
 
         </section>
 
-      </article>
+      </article> -->
 
 
 
@@ -940,7 +940,7 @@
         - #BLOG
       -->
 
-      <article class="blog" data-page="blog">
+      <!-- <article class="blog" data-page="blog">
 
         <header>
           <h2 class="h2 article-title">Blog</h2>
@@ -1122,7 +1122,7 @@
 
         </section>
 
-      </article>
+      </article> -->
 
 
 
@@ -1132,7 +1132,7 @@
         - #CONTACT
       -->
 
-      <article class="contact" data-page="contact">
+      <!-- <article class="contact" data-page="contact">
 
         <header>
           <h2 class="h2 article-title">Contact</h2>
@@ -1169,14 +1169,11 @@
 
         </section>
 
-      </article>
+      </article> -->
 
     </div>
 
   </main>
-
-
-
 
 
 
